--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,24 @@
-Welcome
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="jsforce.min.js" type="text/javascript"></script>
+    <script>
+        jsforce.browser.init({
+            clientId: "3MVG9n_HvETGhr3DeLny5qSNBr71mq_fazczwcUGpccbZUMPJXJ6tp_mnYTt1jPC6F847j4O5HP1LcWS6gQOr",
+            redirectUri: "https://sf-compare.herokuapp.com/auth"
+          });
+          jsforce.browser.on("connect", function(conn) {
+            conn.query("SELECT Id, Name FROM Account", function(err, res) {
+              if (err) {
+                return console.error(err);
+              }
+              console.log(res);
+            });
+          });
+      
+    </script>
+  </head>
+  <body>
+    <button onclick="javascript:jsforce.browser.login();">Login</button>
+  </body>
+</html>
