--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
                 return console.error(err);
             }
             console.log(res);
+            document.getElementById('result').innerHTML = res;
         });
         });
       
@@ -21,5 +22,6 @@
   </head>
   <body>
     <button onclick="javascript:jsforce.browser.login();">Login</button>
+    <div id="response"></div>
   </body>
 </html>
