Changes for auth

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,6 @@
   </head>
   <body>
     <button onclick="javascript:jsforce.browser.login();">Login</button>
-    <div id="response"></div>
+    <div id="result"></div>
   </body>
 </html>
