--- a/client/index.html
+++ b/client/index.html
@@ -2,26 +2,13 @@
 <html>
   <head>
     <script src="jsforce.min.js" type="text/javascript"></script>
-    <script>
-        jsforce.browser.init({
-            clientId: "3MVG9n_HvETGhr3DeLny5qSNBr71mq_fazczwcUGpccbZUMPJXJ6tp_mnYTt1jPC6F847j4O5HP1LcWS6gQOr",
-            redirectUri: "https://sf-compare.herokuapp.com/auth",
-            proxyUrl: 'https://sf-compare.herokuapp.com/proxy/'
-        });
-        jsforce.browser.on("connect", function(conn) {
-            conn.query("SELECT Id, Name FROM Account", function(err, res) {
-            if (err) {
-                return console.error(err);
-            }
-            console.log(res);
-            document.getElementById('result').innerHTML = JSON.stringify(res, null, 4);
-        });
-        });
-      
-    </script>
+    <script src="./metadata.js" type="text/javascript"></script>
   </head>
   <body>
     <button onclick="javascript:jsforce.browser.login();">Login</button>
+    <button onclick="javascript:getMetadataDetails();">Get Metadata Details</button>
     <div id="result"></div>
+
+    <div id="namespace"></div>
   </body>
 </html>
